--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,6 +1,6 @@
 <header class="header container">
   <h1 class="header__title">
-    <a href="/">Samir Betmouni</a>
+    <a href="/">Home</a>
   </h1>
   <ul class="header__links">
     <li>
