--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <p>&copy; Marie Jackson 2022</p>
+  <p>Portfolio built with the help of <a href="https://www.freecodecamp.org/news/learn-eleventy/">FreeCodeCamp</a> </p>
 </footer>
