--- a/src/css/style.css
+++ b/src/css/style.css
@@ -347,7 +347,8 @@ a {
 }
 
 .project__image-wrapper img {
-    width: 100%;
+    width: 80%;
+    max-width: 300px;
     height: auto;
     margin-bottom: 2rem;
     border-radius: 0.25rem;
