--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,7 @@ a {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 4rem;
+    /* margin-bottom: 0.5rem; */
     padding: 1rem 1.5rem;
 }
 
@@ -267,8 +267,9 @@ a {
 }
 
 .project-card__image-wrapper img {
-    width: 100%;
+    max-width: 300px;
     height: auto;
+    margin: auto;
     border-top-left-radius: 0.375rem;
     border-top-right-radius: 0.375rem;
     transition: transform 0.3s ease 0s;
